--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 REACT_APP_POST_SERVICE_URL = http://localhost:4000
 REACT_APP_COMMENT_SERVICE_URL = http://localhost:4001
+REACT_APP_QUERY_SERVICE_URL = http://localhost:4002
