--- a/client/package.json
+++ b/client/package.json
@@ -2,18 +2,26 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "main": "dist/index.js",
+  "module": "dist/index.modern.js",
+  "source": "src/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^4.2.1",
+    "microbundle-crl": "^0.13.10",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^8.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:m": "microbundle-crl watch --no-compress --no-sourcemap --format cjs --css-modules false",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
