--- a/moderation/package.json
+++ b/moderation/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "post",
+  "name": "moderation",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "node-fetch": "^3.3.0",
+    "axios": "^1.3.2",
+    "express": "^4.18.2",
     "nodemon": "^2.0.20"
   }
 }
